5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1807_2566.log
== TEST (2019-06-13 08:04:24) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
	elif(faltas[x]==5):
		v[3] = v[3] +1
	elif(faltas[x]==6):
		v[4] = v[4] +1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
print (v)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:04:40) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
	elif(faltas[x]==5):
		v[3] = v[3] +1
	elif(faltas[x]==6):
		v[4] = v[4] +1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
print (v*10)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 08:04:51) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
	elif(faltas[x]==5):
		v[3] = v[3] +1
	elif(faltas[x]==6):
		v[4] = v[4] +1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
print (v*10)
	
-- EXECUTION TIME:
1.09328
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[30  0  0 30 40 60]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[10 20 40 50 50 80]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[20 10 30 10 20 40]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:04:54) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
	elif(faltas[x]==5):
		v[3] = v[3] +1
	elif(faltas[x]==6):
		v[4] = v[4] +1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
print (v*10)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:05:17) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
	elif(faltas[x]==5):
		v[3] = v[3] +1
	elif(faltas[x]==6):
		v[4] = v[4] +1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
print (v*10)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:08:45) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
	elif(faltas[x]==5):
		v[3] = v[3] +1
	elif(faltas[x]==6):
		v[4] = v[4] +1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
print (v*10)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:08:59) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
	elif(faltas[x]==5):
		v[3] = v[3] +1
	elif(faltas[x]==6):
		v[4] = v[4] +1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
print (v)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:09:29) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
	elif(faltas[x]==5):
		v[3] = v[3] +1
	elif(faltas[x]==6):
		v[4] = v[4] +1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
print (v)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:13:52) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
	elif(faltas[x]==5):
		v[3] = v[3] +1
	elif(faltas[x]==6):
		v[4] = v[4] +1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
soma = 0
for x in range (size(v)):
	soma=soma + v[x]

print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:14:15) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
	elif(faltas[x]==5):
		v[3] = v[3] +1
	elif(faltas[x]==6):
		v[4] = v[4] +1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
soma = 0
for x in range (size(v)):
	soma=soma + v[x]

print(v)
print(soma*100)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:22:14) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + v[0]
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + v[1]
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + v[2]
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + v[3]
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + v[4]
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + v[5]

for x in range (size(v)):
	

print(v)
print(soma*100)
-- ERROR:
File "XXXX", line 30
    print(v)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:22:26) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + v[0]
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + v[1]
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + v[2]
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + v[3]
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + v[4]
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + v[5]

for x in range (size(v)):
	a

print(v)
print(soma*100)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:22:54) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + v[0]
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + v[1]
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + v[2]
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + v[3]
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + v[4]
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + v[5]

for x in range (size(v)):
	soma=soma

print(v)
print(soma*100)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:23:32) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + v[0]
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + v[1]
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + v[2]
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + v[3]
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + v[4]
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + v[5]



print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:23:39) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + v[0]
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + v[1]
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + v[2]
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + v[3]
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + v[4]
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + v[5]



print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:24:02) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + v[0]
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + v[1]
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + v[2]
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + v[3]
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + v[4]
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + v[5]



print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:25:05) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + v[0]
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + v[1]
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + v[2]
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + v[3]
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + v[4]
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + v[5]



print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:27:11) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1



print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:27:32) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1



print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:40:34) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma*0,1
for x in range (size(v)):
	v[x] = range(v[x]/soma,1)

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:41:15) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma*0,1
for x in range (size(v)):
	v[x] = v[x]/soma

print(range(v[x],1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 08:41:56) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma*0.1
for x in range (size(v)):
	v[x] = v[x]/soma

print(range(v[x],1))
-- EXECUTION TIME:
1.01235
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
range(3, 1)
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
range(3, 1)
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
range(3, 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:42:01) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma*0.1
for x in range (size(v)):
	v[x] = v[x]/soma

print(range(v[x],1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 08:42:37) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma*0.1
for x in range (size(v)):
	v[x] = range(v[x]/soma,1)

print(v)
-- EXECUTION TIME:
1.13995
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2566/main.py", line 28, in <module>
    v[x] = range(v[x]/soma,1)
TypeError: 'numpy.float64' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:42:38) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma*0.1
for x in range (size(v)):
	v[x] = range(v[x]/soma,1)

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:43:13) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1

for x in range (size(v)):
	v[x] = range(v[x]/soma,2)

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:43:42) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
a=0
for x in range (size(v)):
	a = range(v[x]/soma,2)

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:48:57) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1

for x in range (size(v)):
	v[x] = range(v[x],3)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:49:22) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1

for x in range (size(v)):
	v[x] = round(v[x],3)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:49:34) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1

for x in range (size(v)):
	v[x] = round(v[x]/soma,3)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:49:59) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma *0.1
for x in range (size(v)):
	v[x] = round(v[x]/soma,1)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:50:21) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma *0.1
for x in range (size(v)):
	v[x] = round(v[x]/soma,1)
print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:50:44) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma *0.1

print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:51:26) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 6
for x in range (size(v)):
	v[x] = round(v[x]/soma,1)
print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:51:54) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 10
for x in range (size(v)):
	v[x] = round(v[x]/soma,1)
print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:52:03) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 10
for x in range (size(v)):
	v[x] = round(v[x]/soma,1)
print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:52:24) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
for x in range (size(v)):
	v[x] = round(v[x]/soma,1)
print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:52:30) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
for x in range (size(v)):
	v[x] = round(v[x]/soma,1)
print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 08:52:47) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
for x in range (size(v)):
	v[x] = round(v[x]/soma,1)
print(v)

-- EXECUTION TIME:
1.0701
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:52:59) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
for x in range (size(v)):
	v[x] = round(v[x]/soma,1)
print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:53:15) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
for x in range (size(v)):
	v[x] = round(v[x]/soma,2)
print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:53:39) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
for x in range (size(v)):
	v[x] = round((v[x]/soma),2)
print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:54:18) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
for x in range (size(v)):
	v[x] = (v[x]/soma)
print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:54:36) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 10
for x in range (size(v)):
	v[x] = (v[x]/soma)
print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:57:43) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 10
for x in range (size(v)):
	print(v[x]/soma)
	v[x] = v[x]/soma
	
print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:58:19) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
for x in range (size(v)):
	print(v[x]/soma)
	v[x] = v[x]/soma
	
print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:58:44) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
for x in range (size(v)):
	print(round(v[x]/soma, 1))
	v[x] = v[x]/soma
	
print(v)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 08:59:10) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
for x in range (size(v)):
	v[x] = round(v[x]/soma, 1)
print(v)

-- EXECUTION TIME:
0.868373
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:59:18) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
for x in range (size(v)):
	v[x] = round(v[x]/soma, 1)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:59:42) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
for x in range (size(v)):
	v[x] = round(v[x]/soma, 1)
print(round(v,1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:00:01) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
for x in range (size(v)):
	v[x] = round(v[x]/soma, 1)
print(round(v,1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:00:09) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
for x in range (size(v)):
	v[x] = round(v[x]/soma, 1)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:00:37) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
for x in range (size(v)):
	v[x] = round((v[x]/soma), 1)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:00:55) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
for x in range (size(v)):
	v[x] = round((v[x]/soma), 1)
	print(v[x])
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:01:10) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
for x in range (size(v)):
	v[x] = round((v[x]/soma), 1)
	print(round(v[x],2)
print(v)

-- ERROR:
File "XXXX", line 30
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:01:19) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
for x in range (size(v)):
	v[x] = round((v[x]/soma), 1)
	print(round(v[x],2))
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:06:45) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
for x in range (size(v)):
	print(round((v[x]/soma), 1))
	v[x] = round((v[x]/soma), 1)
	print(round(v[x],2))
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:07:43) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
aux = 0
for x in range (size(v)):
	print(round((v[x]/soma), 1))
	aux = round((v[x]/soma), 1)
	v[x] = aux
	print(round(v[x],2))
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:08:28) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
aux = 0
for x in range (size(v)):
	print(round((v[x]/soma), 1))
	aux = round((v[x]/soma), 1)
	print('aux: ',aux)
	v[x] = aux
	print(round(v[x],2))
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:22:20) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
aux = 0
for x in range (size(v)):
	print(round((v[x]/soma), 1))
	aux = round((v[x]/soma), 1)
	print('aux: ',aux)
	float(v[x]) = aux
	print(round(v[x],2))
print(v)

-- ERROR:
File "XXXX", line 32
    float(v[x]) = aux
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:22:52) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
aux = 0
for x in range (size(v)):
	print(round((v[x]/soma), 1))
	aux = round((v[x]/soma), 1)
	print('aux: ',aux)
	v[x] = float(v[x])
	v[x] = aux
	print(round(v[x],2))
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:23:39) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
aux = 0
for x in range (size(v)):
	print(round((v[x]/soma), 1))
	aux = round((v[x]/soma), 1)
	print('aux: ',aux)
	v[x] = float(v[x])
	v[x] = aux
	print(round(v[x],2))
print(float(v))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:24:55) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=int)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
aux = 0
for x in range (size(v)):
	print(round((v[x]/soma), 1))
	aux = round((v[x]/soma), 1)
	print('aux: ',aux)
	v[x] = float(v[x])
	v[x] = aux
	print(round(v[x],2))
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:27:05) 
-- CODE:
from numpy import *

faltas = array(eval(input()))
v = zeros(6, dtype=float)

soma = 0
for x in range (size(faltas)):
	if(faltas[x] == 2):
		v[0]=v[0]+1
		soma=soma + 1
	elif(faltas[x] ==3):
		v[1] = v[1] + 1
		soma=soma + 1
	elif(faltas[x] == 4):
		v[2] = v[2] +1
		soma=soma + 1
	elif(faltas[x]==5):
		v[3] = v[3] +1
		soma=soma + 1
	elif(faltas[x]==6):
		v[4] = v[4] +1
		soma=soma + 1
	elif(faltas[x] == 7):
		v[5] = v[5] +1
		soma=soma + 1
soma = soma / 100
aux = 0
for x in range (size(v)):
	aux = round((v[x]/soma), 1)
	v[x] = aux
print(v)

-- EXECUTION TIME:
1.03149
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
